--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,25 @@
 [tool.black]
 line-length = 120
-
+target-version = ['py36', 'py37']
+include = '\.pyi?$'
 exclude = '''
-(
-  /(
-      \.eggs         # exclude a few common directories in the
-    | \.git          # root of the project
-    | \.hg
-    | \.mypy_cache
-    | \.pytest_cache
-    | \.tox
-    | \.venv
-    | _build
-    | buck-out
-    | build
-    | dist
-  )/
-)
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
 '''
+
+[tool.isort]
+line_length=120
+multi_line_output=3
+include_trailing_comma=true
+force-grid-wrap=0
+combine_as_imports=true
